Added Adventure API next to Adventure-Platform-Bukkit, merged all updates from Main and re-adjusted all java 8+ methods, successfully tested on 1.17.1 (Spigot), 1.16.5 (Spigot) and 1.15.2 (Spigot and Paper)