@@ -26,24 +26,24 @@ public class EnumHandler {
                 .filter(Material::isBlock)
                 .map(Material::toString)
                 .map(String::toLowerCase)
-                .toList();
+                .collect(Collectors.toList());
 
         entityNames = Arrays.stream(EntityType.values())
                 .map(EntityType::toString)
                 .map(String::toLowerCase)
                 .filter(entityName -> !entityName.equalsIgnoreCase("unknown"))
-                .toList();
+                .collect(Collectors.toList());
 
         itemNames = Arrays.stream(Material.values())
                 .filter(Material::isItem)
                 .map(Material::toString)
                 .map(String::toLowerCase)
-                .toList();
+                .collect(Collectors.toList());
 
         statNames = Arrays.stream(Statistic.values())
                 .map(Statistic::toString)
                 .map(String::toLowerCase)
-                .toList();
+                .collect(Collectors.toList());
 
         entitySubStatNames = Arrays.stream(Statistic.values())
                 .filter(statistic -> statistic.getType().equals(Statistic.Type.ENTITY))
@@ -53,7 +53,7 @@ public class EnumHandler {
 
         subStatNames = Stream.of(blockNames, entityNames, itemNames)
                 .flatMap(Collection::stream)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private EnumHandler() {
@@ -110,18 +110,6 @@ public class EnumHandler {
      @param statName String, case-insensitive */
     public static boolean isStatistic(@NotNull String statName) {
         return statNames.contains(statName.toLowerCase());
-    }
-
-    public static boolean isDistanceStatistic(@NotNull String statName) {
-        return statName.toLowerCase().contains("one_cm");
-    }
-
-    public static boolean isDamageStatistic(@NotNull String statName) {
-        return statName.toLowerCase().contains("damage");
-    }
-
-    public static boolean isTimeStatistic(@NotNull String statName) {
-        return statName.toLowerCase().contains("time") || statName.toLowerCase().contains("one_minute");
     }
 
     /** Returns the names of all general statistics in lowercase */
